Fixed bubble set problem introduced with pathway node offset fix (#947) Added three plugins to product definition that needs to be explicitly started for Juno exported products.
git-svn-id: svn://localhost:8080/caleydo_main/trunk@5568 1f7349ae-fd9f-0d40-aeb8-9798e6c0fce3